# manemix

./: .env.prod.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.bootstrap.yml  docker-compose.prod.yml  docker-compose.spa.yml  docker-compose.yml  justfile
.github/workflows/: node.js.yml  rust.yml
conf/nginx/: bootstrap.conf  default.conf  prod.conf  spa-prod.conf  spa.conf
spa/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
spa/src/: app.css  app.html  app.scss  hooks.client.ts
sql/: db.sql  migrate.sh
sql/migrations/: 001_playlist_public.sql  002_albums.sql
src/: db.rs  json_errors.rs  main.rs  render.rs  session.rs  text.rs
src/models/: account.rs  art.rs  audio.rs  event.rs  feature.rs  mail.rs  mod.rs  playlist.rs  session.rs  stat.rs  ticker.rs  track.rs  user.rs
src/pages/: account.rs  album_api.rs  art.rs  auth.rs  events_api.rs  favorites.rs  feature_actions.rs  feed.rs  home.rs  mod.rs  oembed.rs  password.rs  playlist.rs  playlist_actions.rs  playlist_api.rs  queue.rs  social.rs  statics.rs  stats.rs  ticker.rs  track.rs  track_actions.rs  track_api.rs  tracks.rs  user.rs  users.rs
static/: 502.html  dark.css  player.js  style.css  upload.js
templates/: atom-feed.tpl
templates/html/: account.tpl  api.tpl  delete-account.tpl  delete.tpl  faq.tpl  home.tpl  license.tpl  login.tpl  macros.tpl  page.tpl  password-reset.tpl  player-embed.tpl  playlist.tpl  registration.tpl  thanks.tpl  track.tpl  tracklist-page.tpl  user.tpl  userlist-page.tpl
tools/: transcode.sh
(+90 files in other folders)
