[package]
name = "manemix"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "manemix"
path = "src/main.rs"

[[bin]]
name = "manemix-updatetags"
path = "src/bin/updatetags.rs"

[[bin]]
name = "manemix-admin"
path = "src/bin/admin.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
hex = "0.4"
regex = "1"
image = "0.25"
lofty = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "sendmail-transport"] }
rand = "0.8"
bcrypt = "0.16"

[dev-dependencies]
proptest = "1"
